# qxf2-lambdas

./: .gitignore  LICENSE  README.md  conftest.py  docker-compose.yaml
anniversary_image_test/: anniversary_image_test.py  credentials.py  requirements.txt
assign_articles_newsletter/: assign_articles_newsletter.py  requirements.txt
calendar_event/: create_calendar_event.py  query_employees.py  requirements.txt
chatgpt/: chatgpt.py  requirements.txt
cloudwatch-alert-notifier/: cloudwatch_alert_notifier.py
comment_review_picker/: comment_reviewer.py
comment_reviewer/: comment_reviewer.py
comment_reviewers/: comment_reviewer_lambda.py
conf/: channel_conf.py
daily_messages/: config.yaml  daily_messages.py  event.json  requirements.txt
daily_pto/: daily_pto.py  requirements.txt
date_recognizer/: date_recognizer.py  requirements.txt
docker_deltas/: conf.py  docker_deltas.py  requirements.txt  streams_common_functions.py
docker_stats/: conf.py  config.yaml  docker_stats.py  requirements.txt  service.py  streams_common_functions.py
dummy_lambda/: lambda_function.py
dummy_rust_lambda/: Cargo.toml
example_rust_lambda/: Cargo.toml
example_rust_lambdas/: Cargo.toml
github_deltas/: conf.py  github_deltas.py  requirements.txt  streams_common_functions.py
github_stats/: conf.py  github_stats.py  requirements.txt  streams_common_functions.py
holiday_reminder/: holiday_reminder.py  requirements.txt
newsletter_remainder/: Cargo.toml
newsletter_remainder/src/: auth.rs  clientsecret.json  config.rs  credentials.json  http_client.rs  main.rs  newsletter-remainder.json  sheets.rs
newsletter_team_generator/: Cargo.toml
newsletter_team_generator/src/: main.rs
pto_detector/: pto_detector.py  requirements.txt
pto_detector_filter/: pto_detector_filter.py
(+186 files in other folders)
