[package]
name = "newsletter_remainder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
hyper = "0.14"
hyper-tls = "*"
google-sheets4 = "5.0.2+20230119"
yup-oauth2 = "*"



tokio = { version = "*", features = ["full"] }
