[package]
name = "newsletter_remainder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
hyper = "0.14"
hyper-tls = "*"
google-sheets4 = "5.0.2"
yup-oauth2 = "*"

rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"

chrono = "0.4"
tokio = { version = "1.28", features = ["full"] }
