[package]
name = "newsletter_team_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pick-one = "1.0.1"
lambda_runtime = "0.7.0"
serde = "1.0.145"
serde_json = "1.0.86"
tokio = "1.21.2"
rand = "0.8.5"
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_credential = "0.42.0"

